# mini-llm-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  concepts.md  learning-roadmap.md  main.py  pyproject.toml  reading.md
data/: embeddings.md  project.md  python.md  rag.md
evals/: golden.json
src/app/: config.py  logging_config.py  main.py  models.py  tracing.py  tracing_store.py
src/app/agent/: __main__.py  react.py  runner.py  tools.py
src/app/api/: routes.py
src/app/evals/: __main__.py  dataset.py  report.py  runner.py  scorers.py
src/app/llm/: client.py  embeddings.py
src/app/rag/: chunking.py  ingest.py  pipeline.py  store.py
tests/: test_agent_api.py  test_agent_react.py  test_agent_runner.py  test_agent_tools.py  test_api.py  test_chunking.py  test_client.py  test_embeddings.py  test_evals_dataset.py  test_evals_report.py  test_evals_runner.py  test_evals_scorers.py  test_ingest.py  test_pipeline.py  test_rag_api.py  test_store.py  test_tracing.py  test_tracing_store.py
