[project]
name = "mini-llm-platform"
version = "0.1.0"
description = "A mini-LLM platform for my own learning!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Requires functions to have type annotations
check_untyped_defs = true     # Type-checks inside functions without annotations

# If a library doesn't have type stubs, don't crash
ignore_missing_imports = true
